Fix alignment in prices

--- a/themes/my-theme/source/css/desktop.scss
+++ b/themes/my-theme/source/css/desktop.scss
@@ -964,6 +964,7 @@
   .academy-course-info-right {
     margin-top: 1.5rem;
     align-self: flex-end;
+    align-items: center;
   }
 
   .academy-course-text {
